basic form.html modified and linked with home page

--- a/homepage.html
+++ b/homepage.html
@@ -19,7 +19,7 @@
              <p>Every team must join us on Kumospace. Make sure that atleast one member of your team is present throughout and we have dedicated workplaces for each team. All the reviews will take place at Kumospace.
                 - Join our Discord server to stay updated. Mentors will be available throughout the duration of the hackathon on Discord. You can anytime drop a message for help and someone from our team will reach out.</p>
                 <br><br>
-             <button type="button" id="u">CLICK HERE TO CHECK HEART BEAT</button>
+             <a href="form.html"><button type="button" id="u">CLICK HERE TO CHECK HEART BEAT</button></a>
          </div>
          <div class="footer">
              <div class="f1">
