--- a/form.html
+++ b/form.html
@@ -237,15 +237,15 @@
                     <input  type="text"  name="slope" > 
 
                     <h3>Number of major vessels (0-3) colored by flourosopy</h3>
-                    <input  type="radio"  name="lastname" >0<br>
-                    <input  type="radio"  name="lastname" >1<br>
-                    <input  type="radio"  name="lastname" >2<br>
-                    <input  type="radio"  name="lastname" >3<br>
+                    <input  type="radio"  name="vessels" >0<br>
+                    <input  type="radio"  name="vessels" >1<br>
+                    <input  type="radio"  name="vessels" >2<br>
+                    <input  type="radio"  name="vessels" >3<br>
 
                     <h3>Thalassemia</h3>
-                    <input  type="radio"  name="lastname" >Normal<br>
-                    <input  type="radio"  name="lastname" >Fixed defect<br>
-                    <input  type="radio"  name="lastname" >reversible defect<br>
+                    <input  type="radio"  name="thal" >Normal<br>
+                    <input  type="radio"  name="thal" >Fixed defect<br>
+                    <input  type="radio"  name="thal" >reversible defect<br>
                    
 
 
